syntax = "proto3";
package rarimo.rarimocore.tokenmanager;

import "gogoproto/gogo.proto";
import "tokenmanager/collection.proto";
import "tokenmanager/item.proto";
import "tokenmanager/params.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/rarimo/rarimo-core/x/tokenmanager/types";

message AddNetworkProposal {
  string title = 1;
  string description = 2;
  Network network = 3 [(gogoproto.nullable) = false];
}

message RemoveNetworkProposal {
  string title = 1;
  string description = 2;
  string chain = 3;
}

message AddFeeTokenProposal {
  string title = 1;
  string description = 2;
  string chain = 3;
  string nonce = 4;
  FeeToken token = 5 [(gogoproto.nullable) = false];
}

message UpdateFeeTokenProposal {
  string title = 1;
  string description = 2;
  string chain = 3;
  string nonce = 4;
  FeeToken token = 5 [(gogoproto.nullable) = false];
}

message RemoveFeeTokenProposal {
  string title = 1;
  string description = 2;
  string chain = 3;
  string contract = 4;
  string nonce = 5;
}

message WithdrawFeeProposal {
  string title = 1;
  string description = 2;
  string chain = 3;
  FeeToken token = 4 [(gogoproto.nullable) = false];
  string receiver = 5;
  string nonce = 6;
}

message UpdateTokenItemProposal {
  string title = 1;
  string description = 2;

  repeated Item item = 3;
}

message RemoveTokenItemProposal {
  string title = 1;
  string description = 2;

  repeated string index = 3;
}

message CreateCollectionProposal {
  string title = 1;
  string description = 2;

  string index = 3;
  CollectionMetadata metadata = 4 [(gogoproto.nullable) = false];
  // All supported networks described
  repeated CollectionData data = 5;
  repeated Item item = 6;
  repeated OnChainItem onChainItem = 7;
}

message UpdateCollectionDataProposal {
  string title = 1;
  string description = 2;

  repeated CollectionData data = 3;
}

message AddCollectionDataProposal {
  string title = 1;
  string description = 2;

  repeated CollectionData data = 3;
}

message RemoveCollectionDataProposal {
  string title = 1;
  string description = 2;

  repeated CollectionDataIndex index = 3;
}

message RemoveCollectionProposal {
  string title = 1;
  string description = 2;

  string index = 3;
}
